--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,14 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <commons-lang3.version>3.12.0</commons-lang3.version>
+        <guava.version>31.0.1-jre</guava.version>
+        <hamcrest.version>2.2</hamcrest.version>
         <junit.version>4.13.1</junit.version>
-        <log4j.version>2.17.0</log4j.version>
+        <log4j.version>2.17.1</log4j.version>
+        <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
+
+        <target>1.8</target>
     </properties>
 
     <build>
@@ -28,10 +34,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <target>1.8</target>
-                    <source>1.8</source>
+                    <target>${target}</target>
+                    <source>${target}</source>
                 </configuration>
             </plugin>
         </plugins>
@@ -56,18 +62,18 @@
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
-            <version>2.2</version>
+            <version>${hamcrest.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.12.0</version>
+            <version>${commons-lang3.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>31.0.1-jre</version>
+            <version>${guava.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
